# SLsimLib

./: CMakeLists.txt  COPYING.md  INSTALL.md  LICENSE.txt  Makefile  Makefile.am  Makefile.in  Makefile.sample  README.md  config.h.in  configure  configure.ac  image_likelihood.cpp  meson.build  sample_paramfile
AnalyticNSIE/: CMakeLists.txt  analytic_lens.h  base_analens.cpp  ellip_exp_lens.c  elliptic.cpp  expanded_powerlaw.cpp  hernquist_lens.cpp  image_tester.c  internal_rayshooter.c  jaffe_lens.cpp  lens.cpp  lens_expand.c  lens_expand.cpp  mark_points.c  meson.build  modes_ana.cpp  nfw_lens.cpp  nsie.c  nsie.cpp  nsie.h  powerlaw.c  powerlaw.cpp  profiles.cpp  randomize_lens.c  randomize_lens.cpp  readfiles_ana.c  readfiles_ana.cpp  readfiles_uni.cpp  singlelens.cpp  source.cpp  sourceAnaGalaxy.cpp
AnalyticNSIE/shapelets_catalog/: obj_10002_mag_z.sif  obj_10005_mag_z.sif  obj_10007_mag_z.sif  obj_10008_mag_z.sif  obj_10009_mag_z.sif  obj_1000_mag_z.sif  obj_10011_mag_z.sif  obj_10012_mag_z.sif  obj_10014_mag_z.sif  obj_10018_mag_z.sif  obj_1001_mag_z.sif  obj_10021_mag_z.sif  obj_10022_mag_z.sif  obj_10024_mag_z.sif  obj_10028_mag_z.sif  obj_10034_mag_z.sif  obj_10036_mag_z.sif  obj_10038_mag_z.sif  obj_10039_mag_z.sif  obj_1003_mag_z.sif  obj_10042_mag_z.sif  obj_1005_mag_z.sif  obj_1006_mag_z.sif  obj_1007_mag_z.sif  obj_1008_mag_z.sif  (+4722 more)
BLR/: CMakeLists.txt  blr_surface_brightness.c  blr_surface_brightness.cpp  blr_surface_brightness2.0.c  blr_surface_brightness2.0.cpp  meson.build
Debug/: makefile  sources.mk
Example/: example.c  internal_rayshooter.c
Example_ana/: example_ana.c  internal_rayshooter.c
Fitlens/: CMakeLists.txt  delens.cpp  fitlens.c  fitlens.cpp  meson.build
FullRange/: CMakeLists.txt  fixedimages.c  fullrange.c  gaussian.cpp  guassian.cpp  imager.c  implant_stars.c  implant_stars.cpp  internal_rayshooter_multi.cpp  internal_rayshooter_multi_test.cpp  internal_rayshooter_nfw.c  internal_rayshooter_nfw.cpp  meson.build  surface_brightness_image.c
Galaxies/: create_sersic.c  create_sersic.cpp  galaxies.h  overzier.cpp  overzier.h  overzier_galaxy.cpp  sersic.cpp  sersic.h
ImageProcessing/: CMakeLists.txt  image_likelihood.cpp  image_processing.h  meson.build  observation.cpp  pixelize.c  pixelize.cpp  pixelmap.cpp
InputParameters/: CMakeLists.txt  InputParams.cpp  causticdata.cpp  input_params_list.cpp  meson.build
Kist/: Kist.c  Kist.cpp  Kist.h
Likelihood/: image_chi_square.cpp
MCMC/: CMakeLists.txt  mcmc.cpp
Microlensing/: internal_rayshooter.c  makeStarField.c  microlenser.c  rayshooter_stars.c
Miscellaneous/: CMakeLists.txt  gadget.cpp  gadgetio.cpp  meson.build
MultiPlane/: CMakeLists.txt  InputParameters.cpp  MOKAfits.cpp  MOKAlens.cpp  a.out  chuncks.c  chuncks.c~  lens.cpp  lens_halos.cpp  lens_multi_dark.cpp  lensmap.cpp  lightcone_construction.cpp  meson.build  model.cpp  multimap.cpp  multiplane.cpp  particle_lens.cpp  planes.cpp  profile.cpp  singlelens.cpp  tables.cpp
NSIE/: image_tester.c  imager.c  imager_galaxy.c  internal_rayshooter.c  makeSIC.c  makeSIE.c  makeSIS.c  rayshooter_tester.c  sistest.c
Notes/: raytracing.tex
Numerics/: CMakeLists.txt  isop.h  quadrature.cpp  quadrature.h
Radio/: internal_rayshooter.c  sisimages.c
Render/: CMakeLists.txt  isop_render.cpp  isop_render.h
SLsimLib_cpp/: .cproject  .project
Source/: CMakeLists.txt  bands_etc.cpp  functor.h  kcorr_Richards06.txt  meson.build  multi.cpp  overzier.cpp  quasarLF.cpp  read_galaxy_file.cpp  read_multi.cpp  read_sersic_file.cpp  sersic.cpp  sky.cpp  type.cpp
TreeCode/: CMakeLists.txt  TreeNB.c  TreeNB.cpp  TreeNB.h  TreeNBDriver.c  TreeNBDriver.cpp  TreeNBForce.c  TreeNBForce.cpp  forceTree.cpp  forceTree.cpp.orig  makeStarField.c  makeTreeNB.c  meson.build  minimization.c  profiles.cpp  qTreeNB.cpp  quadForceTrees.cpp  quadTree.cpp  quad_profiles.cpp  rayshooterNB.c  rayshooterNB.cpp  rayshooter_idl.c  readfiles.c  readfiles.cpp  simpleTree.cpp  testTree.c  testshooter.c
TreeCode_link/: #curve_routines.cpp#  CMakeLists.txt  KistDriver.c  KistDriver.cpp  Tree.c  Tree.cpp  Tree.h  TreeDriver.c  TreeDriver.cpp  TreeDriver.cpp.orig  TreeKist.cpp  change_redshifts.cpp  change_redshits.c  change_redshits.cpp  curve_routines.c  curve_routines.cpp  dirtycode.cpp  divide_images.c  divide_images.cpp  divide_images.h  double_sort.c  double_sort.cpp  find_crit.c  find_crit.cpp  geometry.cpp  grid_initialization.c  grid_maintenance.c  grid_maintenance.cpp  gridmap.cpp  image_finder.c  image_finder.cpp  image_finder_kist.c  image_finder_kist.cpp  image_finder_kist.cpp.orig  isop_render.cpp  makeTree.c  map_images.c  map_images.cpp  map_images.cpp.orig  map_images.h  (+12 more)
Utilities/: mcmc.cpp
include/: CMakeLists.txt  InputParameters.h  InputParams.h  Kist.h  KistDriver.h  List.h  List1.h  List_old.h  MOKAfits.h  MOKAlens.h  Tree.h  TreeKist.h  TreeNB.h  analytic_lens.h  bands_etc.h  bas  base_analens.h  causticdata.h  concave_hull.h  cpfits.h  debug.h  delens.h  disk.h  divide_images.h  doc.h  elliptic.h  fitlens.h  forceTree.h  gadget.hh  gadgetio.hpp  galaxies.h  gaussian.h  generator.h  geometry.h  grid_maintenance.h  gridmap.h  image_chi_square.h  image_info.h  image_likelihood.h  image_processing.h  (+53 more)
shapelets_catalog/: obj_10000_mag_z.sif  obj_10001_mag_z.sif  obj_10003_mag_z.sif  obj_10004_mag_z.sif  obj_10006_mag_z.sif  obj_10013_mag_z.sif  obj_10016_mag_z.sif  obj_10017_mag_z.sif  obj_10020_mag_z.sif  obj_10023_mag_z.sif  obj_10025_mag_z.sif  obj_10026_mag_z.sif  obj_10027_mag_z.sif  obj_10029_mag_z.sif  obj_1002_mag_z.sif  obj_10030_mag_z.sif  obj_10031_mag_z.sif  obj_10032_mag_z.sif  obj_10035_mag_z.sif  obj_10037_mag_z.sif  obj_10040_mag_z.sif  obj_10041_mag_z.sif  obj_10043_mag_z.sif  obj_10044_mag_z.sif  obj_10045_mag_z.sif  obj_1004_mag_z.sif  obj_1009_mag_z.sif  obj_1010_mag_z.sif  obj_1016_mag_z.sif  obj_1017_mag_z.sif  obj_1019_mag_z.sif  obj_1026_mag_z.sif  obj_1028_mag_z.sif  obj_1029_mag_z.sif  obj_102_mag_z.sif  obj_1031_mag_z.sif  obj_1033_mag_z.sif  obj_1035_mag_z.sif  obj_1037_mag_z.sif  obj_1038_mag_z.sif  (+4563 more)
(+149 files in other folders)
