slsimlib_files = []
subdir('AnalyticNSIE')
subdir('BLR')
subdir('Fitlens')
subdir('FullRange')
subdir('ImageProcessing')
subdir('InputParameters')
subdir('MultiPlane')
subdir('Source')
subdir('TreeCode')
subdir('TreeCode_link')
subdir('Miscellaneous')

slsimlib_includes = include_directories('include')
